fix flex bug on firefox

--- a/style.css
+++ b/style.css
@@ -81,7 +81,9 @@ button {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
     row-gap: 25px;
+    flex: 1;
 }
+
 .grid-item {
     display: flex;
     flex-direction: column;
@@ -104,7 +106,6 @@ button {
 .grid-item.active>.bug{
     opacity: 1;
 }
-
 
 @media (min-width: 600px) {
     .grid-container {
